# picturest

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  env_sample  main.py  pyproject.toml  requirements.txt
api/: schemas.py  schemas_transformation.py
api/conf/: config.py
api/database/: db.py  models.py
api/repository/: comment_service.py  comments.py  pictures.py  rating.py  search.py  searching_service.py  tags.py  transformations.py  users.py  web_service.py
api/routes/: auth.py  comments.py  pictures.py  profile.py  rating.py  search.py  searching.py  tags.py  transformations.py  users.py  web_route.py
api/schemas/: essential.py  transformation.py
api/services/: Web_service.py  auth.py  cloud_picture.py  email.py  mailing.py  transformation_picture.py  transformatioon_picture.py
api/services/templates/: confirmation_email.html  email.html  email_template.html
docs/: conf.py  index.rst
front/: index.html
front/routes/: web_forms.py  web_route.py
front/templates/: admin_area.html  authorized.html  base.html  fail.html  home.html  index.html  login.html  profile.html  register.html  success.html  upload.html
front/templates/css/: styles.css
front/templates/js/: main.js
front/templates/parts/: pictures_list.html  user_profile.html
migrations/: env.py
migrations/versions/: 143aeb6fe5c6_init.py  256b44b492b4_shared_column_and_rating_table.py  40201f591735_init.py  521f9985cbf4_init.py  6e01e4b0bba8_create_roles.py  7c5085e3c193_add_shared_column_to_pictures_table.py  7d6abbe2e3af_init.py  8f8588b3e587_init.py  9ab9c36a0300_uniq_constraints.py  c34653f18134_share.py  e4709d56ec78_black_list.py  e5761b6b1d36_sharet.py
static/css/: styles.css
templates/: 1.html  index.html  login.html  register.html  success.html  upload.html
tests/: conftest.py  test_route_auth.py
