[tool.poetry]
name = "picturest"
version = "0.1.0"
description = "\"REST API for working with pictures in a cloud\""
authors = ["Devel More Group"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
psycopg2-binary = "^2.9.6"
alembic = "^1.11.1"
pydantic = "^2.0.3"
pydantic-settings = "^2.0.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
