[tool.poetry]
name = "picturest"
version = "0.1.0"
description = "\"REST API for working with pictures in a cloud\""
authors = ["Devel More Group"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
psycopg2-binary = "^2.9.6"
alembic = "^1.11.1"
pydantic = {extras = ["email"], version = "^2.0.3"}
pydantic-settings = "^2.0.2"
cloudinary = "^1.33.0"
faker = "^19.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
libgravatar = "^1.0.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-mail = "^1.4.1"
python-multipart = "^0.0.6"
pytest = "^7.4.0"
httpx = "^0.24.1"
python-slugify = "^8.0.1"
qrcode = "^7.4.2"
sqlalchemy-utils = "^0.41.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
sphinx = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["."]
